--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "mun-dances",
   "version": "1.0.0",
   "description": "This is for a popular dance academy",
-  "main": "app.js",
+  "main": "index.js",
   "engines": {
     "node": "18.x"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "node index.js",
+    "server": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ranadip Munda",
