--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-    "version":2,
+    "version": 2,
     "builds": [
         {
-            "src": "./app.js",
+            "src": "./index.js",
             "use": "@vercel/node"
         }
     ],
