--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongoose": "^7.4.3",
     "nodemon": "^3.0.1",
